--- a/src/app/admin/features/logmaintain/logmaintain.component.html
+++ b/src/app/admin/features/logmaintain/logmaintain.component.html
@@ -1,30 +1,25 @@
 <div class="card">
-    <h5>Smartcard Re Allocation - {{count}}</h5>
+    <h5>LOGS INFORMATION </h5>
     <div class="row d-flex justify-content-center align-items-center  ">
         <div class="col-12 col-sm-12 col-md-12  mb-3">
             <div class="row d-flex justify-content-center align-items-center  ">
                 <div class="col-12 col-md-11 ">
                     <div class="d-flex justify-content-end align-items-center mb-3 ">
-                        <div class="d-flex justify-content-center align-items-center position-relative"
-                            style="padding: 10px;" (click)="showDisabledMessage()">
-                            <button type="button" class="btn bttn" [disabled]="!isAnyRowSelected">
-                                <i class="fa fa-thumbs-down" aria-hidden="true"></i> ReAllocation
-                            </button>
-                        </div>
-                        &nbsp;&nbsp;
                         <div class="icon-container d-flex align-items-center  ">
-                            <img src="/assets/images/icons/Excel.png" width="40px" (click)="generateExcel()">
+                            <!-- <img src="/assets/images/icons/Excel.png" width="40px" (click)="generateExcel()"> -->
+                            <img src="/assets/images/icons/Excel.png" width="40px" >
                             <!-- <div class="tooltip">Excel</div> -->
                         </div>
                         &nbsp;&nbsp;
                         <div class="icon-container d-flex align-items-center  ">
-                            <img src="/assets/images/icons/pdf.png" width="40px" (click)="generatePDF()">
+                            <img src="/assets/images/icons/pdf.png" width="40px">
+                            <!-- <img src="/assets/images/icons/pdf.png" width="40px" (click)="generatePDF()"> -->
                             <!-- <div class="tooltip">Pdf</div> -->
                         </div>
                     </div>
                     <ag-grid-angular #agGrid id="myGrid" domLayout='normal' class="ag-theme-alpine table-class"
                         rowAnimation [rowSelection]="rowSelection" [gridOptions]="gridOptions" [columnDefs]="columnDefs"
-                        [rowData]="rowData" (selectionChanged)="onSelectionChanged($event)"
+                        [rowData]="rowData" 
                         (gridReady)="onGridReady($event)" [enableCellTextSelection]="true">
                     </ag-grid-angular>
                 </div>
