--- a/src/app/admin/features/nav/nav.component.scss
+++ b/src/app/admin/features/nav/nav.component.scss
@@ -438,3 +438,10 @@
     font-size: 20px;
     color: black;
 }
+
+.ver_role {
+    font-size: larger;
+    font-weight: 700;
+    color: unset;
+    padding: 15px;
+}
