--- a/src/app/admin/features/operator_Login/operatordashboard/operatordashboard.component.html
+++ b/src/app/admin/features/operator_Login/operatordashboard/operatordashboard.component.html
@@ -1,8 +1,8 @@
 <div *ngIf="role == 'ROLE_OPERATOR'">
-    <div class="col-12 col-md-2 d-flex  justify-content-start align-items-start">
+    <!-- <div class="col-12 col-md-2 d-flex  justify-content-start align-items-start">
         <button type="button" class="btn  bttn" (click)="goBack()"><i class="fa-solid fa-reply mx-2"></i>Back
             to Login</button>
-    </div>
+    </div> -->
     <div class="row" style="padding: 10px;">
         <div class="col-12 col-md-7 display justify-content-center align-item-center balance gap-3">
 
@@ -26,24 +26,32 @@
                     </div>
                 </div>
             </div>
-            <div *ngIf="walletshare" class="card box d-flex flex-column justify-content-between p-3" (click)="addnew()">
-                <div class="d-flex justify-content-around">
-                    <div class="mt-2 mb-3 text-center text1">Current Balance</div>
-                    <i class="fa-solid fa-share forward mt-2 mb-3"></i>
-                </div>
-                <div class="d-flex justify-content-center align-item-center ">
-                    <i class="fa-solid fa-indian-rupee-sign rupee mx-2"></i>
-                    <h5>{{operatorBalance}} </h5>
+            <!-- <div *ngIf="walletshare" class="card box d-flex flex-column justify-content-between p-3" (click)="addnew()"> -->
+            <!-- <div *ngIf="walletshare" class="box col-12 col-lg-4 mb-3" (click)="addnew()"> -->
+            <div *ngIf="walletshare" class="col-12 col-lg-4 mb-3 " (click)="addnew()">
+                <div class="card d-flex flex-column justify-content-between p-3">
+                    <div class=" d-flex justify-content-around">
+                        <div class="mt-2 mb-3 text-center text1">Current Balance</div>
+                        <i class="fa-solid fa-share forward mt-2 mb-3"></i>
+                    </div>
+                    <div class="d-flex justify-content-center align-item-center ">
+                        <i class="fa-solid fa-indian-rupee-sign rupee mx-2"></i>
+                        <h5>{{operatorBalance}} </h5>
+                    </div>
                 </div>
             </div>
-            <div *ngIf="!walletshare" class="card box d-flex flex-column justify-content-between p-3">
-                <div class="d-flex justify-content-around">
-                    <div class="mt-2 mb-3 text-center text1">Current Balance</div>
-                    <!-- <i class="fa-solid fa-share forward mt-2 mb-3"></i> -->
-                </div>
-                <div class="d-flex justify-content-center align-item-center ">
-                    <!-- <i class="fa-solid fa-indian-rupee-sign rupee mx-2"></i> -->
-                    <h5>{{operatorBalance}} </h5>
+            <!-- <div *ngIf="!walletshare" class="box col-12 col-lg-4 mb-3"> -->
+            <!-- <div *ngIf="!walletshare" class="card box d-flex flex-column justify-content-between p-3"> -->
+            <div *ngIf="!walletshare" class="col-12 col-lg-4 mb-3 " >
+                <div class="card d-flex flex-column justify-content-between p-3">
+                    <div class="d-flex justify-content-around">
+                        <div class="mt-2 mb-3 text-center text1">Current Balance</div>
+                        <!-- <i class="fa-solid fa-share forward mt-2 mb-3"></i> -->
+                    </div>
+                    <div class="d-flex justify-content-center align-item-center ">
+                        <!-- <i class="fa-solid fa-indian-rupee-sign rupee mx-2"></i> -->
+                        <h5>{{operatorBalance}} </h5>
+                    </div>
                 </div>
             </div>
         </div>
@@ -251,10 +259,10 @@
     </div>
 </div>
 <div *ngIf="role == 'ROLE_SUBLCO'" class="row" style="padding: 10px;">
-    <div class="col-12 col-md-2 d-flex  justify-content-start align-items-start">
+    <!-- <div class="col-12 col-md-2 d-flex  justify-content-start align-items-start">
         <button type="button" class="btn  bttn" (click)="goBack()"><i class="fa-solid fa-reply mx-2"></i>Back
             to Login</button>
-    </div>
+    </div> -->
     <div class="row" style="padding: 10px;">
         <div *ngIf="walletshare" class="col-12 col-md-7 display justify-content-center align-item-center balance gap-3">
             <div *ngIf="walletshare" class="col-12 col-lg-6 mb-3 ">
@@ -372,7 +380,8 @@
                 <div class="card box d-flex flex-column justify-content-between p-3" (click)="openLCO_Dialog(4)">
                     <div class="d-flex justify-content-between w-100">
                         <i class='bx bxs-user-plus'></i>
-                        <span class="fw-bold">{{lcoDeatails?.newcount || operatorDetailsCount?.newsmartcard}}</span>
+                        <span class="fw-bold">{{lcoDeatails?.newcount ||
+                            operatorDetailsCount?.newsmartcard}}</span>
                     </div>
                     <div class="mt-2 mb-2 text-center text">First Time Activation</div>
                 </div>
