--- a/src/app/admin/features/inventory_role/Dialogue/inventorycortonbox/inventorycortonbox.component.html
+++ b/src/app/admin/features/inventory_role/Dialogue/inventorycortonbox/inventorycortonbox.component.html
@@ -211,7 +211,7 @@
         <div class="dialog-body">
             <div class="row align-items-center input_box">
                 <div class="col-12 col-md-3">
-                    <label class="form-label">Subscriber Name</label>
+                    <span class="form-label">Subscriber Name</span>
                 </div>
                 <div class="col-12 col-md-9 mb-3 file-upload-container">
                     <input type="text" class="file-input" [(ngModel)]="selectSubscriber"
@@ -219,23 +219,23 @@
                 </div>
             </div>
 
-            <!-- <div class="row align-items-center input_box">
+            <div *ngIf="distributor" class="row align-items-center input_box">
                 <div class="col-12 col-md-3">
-                    <label class="form-label">LCO Name</label>
+                    <span class="form-label">LCO Name</span>
                 </div>
                 <div class="col-12 col-md-9 mb-3 file-upload-container">
-                    <select id="operator" class="file-input" [(ngModel)]="selectLco">
+                    <select  class="file-input" [(ngModel)]="selectOperator" (change)="onAreaList($event)">
                         <option value="0" selected>Select LCO</option>
                         <option *ngFor="let lco of filteredOperatorList" [value]="lco.value"
-                            (ngModelChange)="onAreaList($event)">
+                            (selectChange)="onAreaList($event)">
                             {{ lco.name }}
                         </option>
                     </select>
                 </div>
-            </div> -->
+            </div>
             <div class="row align-items-center input_box">
                 <div class="col-12 col-md-3">
-                    <label class="form-label">Area Name</label>
+                    <span class="form-label">Area Name</span>
                 </div>
                 <div class="col-12 col-md-9 mb-3 file-upload-container">
                     <select id="area" class="file-input" [(ngModel)]="selectArea">
@@ -250,7 +250,7 @@
 
             <div class="row align-items-center input_box">
                 <div class="col-12 col-md-3">
-                    <label class="form-label">Street Name</label>
+                    <span class="form-label">Street Name</span>
                 </div>
                 <div class="col-12 col-md-9 mb-3 file-upload-container">
                     <select id="street" class="file-input" [(ngModel)]="selectStreet">
@@ -263,7 +263,7 @@
             </div>
             <div class="row align-items-center input_box">
                 <div class="col-12 col-md-3">
-                    <label class="form-label">Activation</label>
+                    <span class="form-label">Activation</span>
                 </div>
                 <div class="col-12 col-md-9 mb-3 file-upload-container">
                     <input type="checkbox" style="width: 20px;height: 20px;" [(ngModel)]="isActivated">
@@ -272,7 +272,7 @@
             <div *ngIf="isActivated">
                 <div class="row align-items-center input_box">
                     <div class="col-12 col-md-3">
-                        <label class="form-label">Package Name</label>
+                        <span class="form-label">Package Name</span>
                     </div>
                     <div class="col-12 col-md-9 mb-3 file-upload-container">
                         <select id="package" class="file-input" [(ngModel)]="selectedPackage">
@@ -288,8 +288,7 @@
                 <div class=" display_tab justify-content-start align-items-center input_box">
                     <div class="row align-items-center mb-3">
                         <div class="col-12 col-md-6 input_box ">
-                            <span for="">Recharge TYPE
-                            </span>
+                            <span for="">Recharge TYPE </span>
                         </div>
                         <div class="col-12 col-md-12">
                             <select [(ngModel)]="selectedRechargetype"
